<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_menu">

    <group>
        <item
            android:id="@+id/menuProfile"
            android:icon="@drawable/profile"
            android:title="@string/profile"
            />

        <item
            android:id="@+id/menuNotifications"
            android:icon="@drawable/notification"
            android:title="@string/notification"
            />
        <item
            android:id="@+id/menuCards"
            android:icon="@drawable/cards"
            android:title="@string/cards"
            />
        <item
            android:id="@+id/menuPasswords"
            android:icon="@drawable/passwords"
            android:title="@string/pwd"
            />
        <item
            android:id="@+id/menuTodo"
            android:icon="@drawable/orders"
            android:title="@string/to_do"
            />
    </group>
    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/settings"
                android:title="@string/settings"
                />
            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/support"
                android:title="@string/support"
                />
            <item
                android:id="@+id/menuAboutus"
                android:icon="@drawable/about"
                android:title="@string/about_us"
                />
            <item
                android:id="@+id/menuLogout"
                android:icon="@drawable/logout"
                android:title="@string/log_out"/>

        </menu>
    </item>



</menu>