<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/itemLayout"
    android:layout_height="120dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:id="@+id/itemLayout1"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/saved_pwd_design">

        <TextView
            android:id="@+id/showUrl"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/facebook"
            android:textSize="25sp"
            android:textStyle="bold"/>

         <TextView
             android:id="@+id/showEmail"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/kovacsb11_hotmail_com"
             android:textSize="18sp" />
        <TextView
            android:id="@+id/showUsername"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hintName"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/showPwd"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_textv"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:src="@drawable/ic_check_green"
            android:contentDescription="igen" />
    </LinearLayout>
        
</LinearLayout>