<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_design">

    <EditText
        android:id="@+id/addURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:hint="@string/url"
        android:background="@drawable/edittext_style"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/addUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/username"
        android:background="@drawable/edittext_style"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addURL"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/addEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/email_tv"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUsername"
        android:autofillHints=""
        android:background="@drawable/edittext_style"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/addPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/pwd_textv"
        android:textAlignment="center"
        android:background="@drawable/edittext_style"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColorHighlight="@color/colorPrimaryText"
        android:background="@drawable/button_design2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPwd" />

</androidx.constraintlayout.widget.ConstraintLayout>