<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/navigationViewColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_style"
        android:text="@string/login_button"
        app:layout_constraintBottom_toTopOf="@id/tvSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtPwd" />
    <ProgressBar
        android:id="@+id/login_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintTop_toBottomOf="@+id/etxtPwd"
        app:layout_constraintBottom_toTopOf="@+id/tvSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <EditText
        android:id="@+id/etxtPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/pwd_textv"
        android:inputType="textPassword"
        android:background="@drawable/edittext_style"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:background="@drawable/edittext_style"
        android:hint="@string/email_tv"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etxtPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locked"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/locked"
        android:layout_width="153dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/logscreen_imgView"
        android:longClickable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/etxtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:src="@drawable/locked"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="27dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toTopOf="@id/locked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="155dp"
        android:text="@string/signup_text"
        app:layout_constraintBottom_toTopOf="@+id/tvSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"/>

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signup_textClick"
        android:textColor="@color/colorSignupTxtV"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion" />

    <ImageView
        android:id="@+id/unlocked"
        android:layout_width="153dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/logscreen_imgView"
        android:longClickable="true"
        android:src="@drawable/unlocked"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/etxtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        />


</androidx.constraintlayout.widget.ConstraintLayout>