<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_header"
    android:orientation="vertical"
    android:background="@color/colorToolbar"
    android:paddingTop="20dp"
    android:paddingStart="15dp"
    android:paddingBottom="5dp"
    android:paddingEnd="0dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/profile_pic"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profilepic" />

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@id/imageProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageProfile"
        app:layout_constraintStart_toStartOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/imageProfile"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:id="@+id/emailDisplay"
        android:text="@string/email_tv"
        android:textColor="@color/colorTextGray"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/logged"
        android:textColor="#99ffff"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        />



</LinearLayout>